change #projects li margin top to -10% and bottom to 20% to prevent text cutting off from the #bottom.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,14 +44,13 @@
 
   #projects li {
     display: inline-block;
-    margin: 0 2.5% 10%;
+    margin: -10% 2.5% 20%;
     width: 45%;
   }
 
 @media screen and (min-width: 600px) {
 
   #margin-auto {
-    margin: 0 auto;
     max-width: 600px;
   }
 }
@@ -91,7 +90,6 @@
     top: 0;
     left: 0;
     width: 58%;
-    z-index: 1;
     margin-bottom: 0;
   }
 
@@ -122,12 +120,9 @@
     float: left;
     background-color: #dfdfdf;
     height: 100vh;
-    padding: 2% 0 0 0;
+    padding: 2% 0;
     -ms-overflow-style: none;
-  }
-
-  #projects {
-    padding: 0;
+    margin: 38px 0 43px;
   }
 
   #side {
